<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="main_btn_popular_movies">Popular Movies</string>
    <string name="main_btn_stock_hawk">Stock Hawk</string>
    <string name="main_btn_build_it_bigger">Build it Bigger</string>
    <string name="main_btn_make_app_material">Make Your App Material</string>
    <string name="main_btn_go_ubiquitous">Go Ubiquitous</string>
    <string name="main_btn_capstone">Capstone</string>

    <string name="toast_message_part_1">This button will launch my</string>
    <string name="toast_message_part_2">app!</string>
</resources>
